# Continuum_Overworld

./: .env.example  .env.template  .gitattributes  .gitignore  AMPLIFY-ENV-VARS.md  BLUEPRINT.md  CONTRIBUTING.md  CURRENT-STATE-ANALYSIS.md  DEPLOYMENT-BLUEPRINT.md  DEPLOYMENT-MANUAL.md  DEPLOYMENT-SPECS.md  DEPLOYMENT-STATUS.md  DEPLOYMENT_SETUP.md  INTEGRATION_CONFIG.md  INTEGRATION_GUIDE.md  LOCAL-DEV-SETUP.md  QUICK-START-DEMO.md  README-IMPLEMENTATION.md  README.md  READY-FOR-LOCAL-DEV.md  RUNBOOK-Integration.md  SESSION-BLUEPRINT.md  STOCKHOLM-MIGRATION.md  STOCKHOLM-STATUS.md  TEAM-HANDOFF.md  amplify.yml  aws_status.md  context.json  continuum_config.yaml  deployment_manifest.json  nexus_deployment_summary.sh  package-lock.json  package.json  test_nexus_infrastructure.sh  verify_setup.sh
.bridge/: ARCHITECTURAL_CHANGES.md  (+6 more)
intergrations/GreenStemGlobalA1/Comms_Agents/: .cursorrules  DEPLOYMENT.md  README.md  agents.yaml  comms_agents_starter_repo.md  deploy.sh  env.example  pyproject.toml
intergrations/GreenStemGlobalA1/Comms_Agents/agents/: __init__.py  scribe.py
intergrations/GreenStemGlobalA1/Comms_Agents/app/: celery_app.py  database.py  deps.py
intergrations/GreenStemGlobalA1/Comms_Agents/infra/: Dockerfile  docker-compose.yml  prometheus.yml
intergrations/GreenStemGlobalA1/Comms_Agents/issue_cards/: eudr_smallholders.md  mechanization_as_a_service.md
intergrations/GreenStemGlobalA1/Comms_Agents/prompts/: scribe.system.md
intergrations/GreenStemGlobalA1/Comms_Agents/tests/: __init__.py  conftest.py  test_scribe.py
intergrations/GreenStemGlobalA1/Comms_Agents/tools/: __init__.py  llm.py  retriever.py
(+737 files in other folders)
